@@ -7,6 +7,7 @@ dh-python (2.20150719) UNRELEASED; urgency=medium
     (closes: 792436, thanks to Chris Lamb for the patch)
   * Clarify purpose of .pydist files (closes: 778633, thanks to Nikolaus Rath
     for the patch)
+  * Remove "module" from extension file names also in Python 2.7
 
  -- Piotr Ożarowski <piotr@debian.org>  Sun, 19 Jul 2015 13:57:42 +0200
 
